# trail-lens

./: .gitignore  LICENSE  README.md
app/: app.json  package.json  pnpm-lock.yaml
app/app/: index.tsx
app/app/(tabs)/: _layout.tsx  index.tsx  logs.tsx
docs/: augmentation_runs.md  inference.md  model_layers.md  model_runs.md  more_epochs.md  search.md
ml/: .gitignore  pyproject.toml
ml/scripts/: search.py
ml/src/trail_lens/: classes.py  dataloader.py  dataset.py  model.py  predict.py  split.py  train.py
